# Schedule-Counselor

./: README.md
Lib/: CMakeLists.txt  main.cpp
Lib/schcon/: avl_tree.h  base.h  calendar.h  date.h  task.h  time.h
Lib/schcon/escapist/: base.h  flag.h  list.h  string.h
Lib/schcon/escapist/internal/: ref_count.h  type_trait.h
